# rust-x86asm

./: .gitignore  Cargo.toml  README.md  instruction_defs.rs  instruction_tests.rs  mnemonic.rs  p  temp
examples/: addressing_modes.rs  encode_basic.rs  encode_function.rs  encode_long.rs  encode_real.rs
gen_defs/: Cargo.toml  README.md  deploy.sh  instruction_defs.rs  make_all.sh  mnemonic.rs
gen_defs/src/: gen_tests.rs  instruction.rs  instruction_def.rs  main.rs  operand.rs  todo
parse_x86_ref/: Cargo.lock.bak  Cargo.toml  avx_defs.rs  avx_extra_defs  extra_defs.rs  gen_avx_defs.sh  gen_defs.sh  header  install_defs.sh  instruction_defs_raw.rs  instruction_defs_raws.rs  test
parse_x86_ref/src/: .main.rs.swo  main.rs  x86reference.xml
parse_x86_ref/templates/: avx_template_cmp  avx_template_cmp32  avx_template_cmp64  avx_template_extr  avx_template_imm8  avx_template_imm82  avx_template_imm83  avx_template_insr  avx_template_mem  avx_template_mov  avx_template_mov_evex  avx_template_mov_vex  avx_template_movmsk  avx_template_movs  avx_template_movsx  avx_template_pd  avx_template_pde  avx_template_ps  avx_template_pse  avx_template_rmem  avx_template_sd  avx_template_ss  avx_template_std  avx_template_std2  avx_template_stda  avx_template_stda2  avx_template_stde  avx_template_vex4  avx_template_xmm  avx_template_xmm2  avx_template_xmm64  avx_template_xmm_or_64  instruction_defs.rs  instruction_defs_raw.rs  (+1 more)
src/: 1  decoding.rs  encoding.rs  instruction.rs  instruction_buffer.rs  instruction_def.rs  instruction_defs.rs  lib.rs  mnemonic.rs  operand.rs
(+2173 files in other folders)
